# AWRD_tut

./: pyproject.toml
src/blog/: models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: home.html  post_detail.html
src/core/: settings.py
