[tool.poetry]
name = "awrd-tut"
version = "0.1.0"
description = ""
authors = ["Ferando J Soares <biofstec@gmail.com>"]
readme = "README.md"
packages = [{include = "awrd_tut"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2 = "^2.9.3"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
